[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/TitleMenu/TitleMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/gui/ashgard_keep.png" type="Texture" id=2]
[ext_resource path="res://graphics/gui/AT_teal.png" type="Texture" id=3]
[ext_resource path="res://fonts/font_title.font" type="BitmapFont" id=4]
[ext_resource path="res://graphics/gui/sword.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="TitleMenu" type="Control"]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
script = ExtResource( 1 )
mouse_filter = 0

[node name="Menu" type="VBoxContainer" parent="."]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 50.0
margin_top = 40.0
margin_right = -50.0
margin_bottom = -40.0
alignment = 0
mouse_filter = 0

[node name="TitleLogo" type="TextureRect" parent="Menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 700.0
margin_bottom = 97.0
texture = ExtResource( 2 )
stretch_mode = 4
mouse_filter = 1

[node name="CentreRow" type="HBoxContainer" parent="Menu"]

rect_min_size = Vector2( 700, 419 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 3
margin_left = 0.0
margin_top = 101.0
margin_right = 700.0
margin_bottom = 520.0
alignment = 0
mouse_filter = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CentreRow"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 3
size_flags_vertical = 3
margin_left = 0.0
margin_top = 0.0
margin_right = 348.0
margin_bottom = 419.0
custom_constants/separation = 20
alignment = 1
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/CentreRow/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 129.0
margin_right = 348.0
margin_bottom = 169.0
alignment = 0
mouse_filter = 0

[node name="ng_icon" type="Sprite" parent="Menu/CentreRow/Buttons/HBoxContainer"]

position = Vector2( -20, 15 )
texture = ExtResource( 3 )

[node name="NewGame" type="Button" parent="Menu/CentreRow/Buttons/HBoxContainer"]

rect_min_size = Vector2( 136, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 136.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true
mouse_filter = 0

[node name="Label" type="Label" parent="Menu/CentreRow/Buttons/HBoxContainer/NewGame"]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = -594.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.266667, 0.254902, 0.305882, 1 )
text = "New Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="HBoxContainer 2" type="HBoxContainer" parent="Menu/CentreRow/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 189.0
margin_right = 348.0
margin_bottom = 229.0
alignment = 0
mouse_filter = 0

[node name="cn_icon" type="Sprite" parent="Menu/CentreRow/Buttons/HBoxContainer 2"]

position = Vector2( -20, 15 )
texture = ExtResource( 3 )

[node name="Continue" type="Button" parent="Menu/CentreRow/Buttons/HBoxContainer 2"]

rect_min_size = Vector2( 136, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 136.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.6875, 0.206787, 0.206787, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true
mouse_filter = 0

[node name="Label" type="Label" parent="Menu/CentreRow/Buttons/HBoxContainer 2/Continue"]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = -594.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.266667, 0.254902, 0.305882, 1 )
text = "Continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="HBoxContainer 3" type="HBoxContainer" parent="Menu/CentreRow/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 249.0
margin_right = 348.0
margin_bottom = 289.0
alignment = 0
mouse_filter = 0

[node name="qt_icon" type="Sprite" parent="Menu/CentreRow/Buttons/HBoxContainer 3"]

position = Vector2( -20, 15 )
texture = ExtResource( 3 )

[node name="Quit" type="Button" parent="Menu/CentreRow/Buttons/HBoxContainer 3"]

rect_min_size = Vector2( 136, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 136.0
margin_bottom = 40.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true
mouse_filter = 0

[node name="Label" type="Label" parent="Menu/CentreRow/Buttons/HBoxContainer 3/Quit"]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = -594.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "Quit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu/CentreRow"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 3
margin_left = 352.0
margin_top = 0.0
margin_right = 700.0
margin_bottom = 419.0
use_top_left = false
mouse_filter = 0

[node name="Logo" type="TextureRect" parent="Menu/CentreRow/CenterContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 64.0
margin_top = 37.0
margin_right = 284.0
margin_bottom = 382.0
texture = ExtResource( 5 )
stretch_mode = 0
mouse_filter = 1

[node name="Version" type="Label" parent="Menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 524.0
margin_right = 700.0
margin_bottom = 538.0
custom_colors/font_color = Color( 0.137255, 0.333333, 0.427451, 1 )
text = "Version"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="Author" type="Label" parent="Menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 542.0
margin_right = 700.0
margin_bottom = 556.0
custom_colors/font_color = Color( 0.137255, 0.333333, 0.427451, 1 )
text = "Chris Hawkins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/HBoxContainer/NewGame" to="." method="_on_NewGame_mouse_enter" binds=[  ]]

[connection signal="mouse_exited" from="Menu/CentreRow/Buttons/HBoxContainer/NewGame" to="." method="_on_NewGame_mouse_exit" binds=[  ]]

[connection signal="pressed" from="Menu/CentreRow/Buttons/HBoxContainer/NewGame" to="." method="_on_NewGame_pressed" binds=[  ]]

[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/HBoxContainer 2/Continue" to="." method="_on_Continue_mouse_enter" binds=[  ]]

[connection signal="mouse_exited" from="Menu/CentreRow/Buttons/HBoxContainer 2/Continue" to="." method="_on_Continue_mouse_exit" binds=[  ]]

[connection signal="pressed" from="Menu/CentreRow/Buttons/HBoxContainer 2/Continue" to="." method="_on_Continue_pressed" binds=[  ]]

[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/HBoxContainer 3/Quit" to="." method="_on_Quit_mouse_enter" binds=[  ]]

[connection signal="mouse_exited" from="Menu/CentreRow/Buttons/HBoxContainer 3/Quit" to="." method="_on_Quit_mouse_exit" binds=[  ]]

[connection signal="pressed" from="Menu/CentreRow/Buttons/HBoxContainer 3/Quit" to="." method="_on_Quit_pressed" binds=[  ]]
